# cyberclawer

./: .gitignore  README.md  instruction.md  mongodb.toml  pyproject.toml  scrape.py
.cursor/plans/: hkcert_bulletin_scraper_fbb89e4a.plan.md
avd_scraper/: __init__.py  browser.py  cli.py  client.py  config.py  cve_backfill.py  filters.py  models.py  mongo.py  mongo_filter.py  providers.py  runner.py  scrape_tui.py  sync.py  tui.py
avd_scraper/parsers/: __init__.py  detail.py  list.py
avd_scraper/scrapers/: __init__.py
avd_scraper/scrapers/avd/: __init__.py  config.py  filter_fields.py  provider.py
avd_scraper/scrapers/cisco/: __init__.py  config.py  filter_fields.py  provider.py
avd_scraper/scrapers/cve/: __init__.py  client.py  config.py  filter_fields.py  provider.py
avd_scraper/scrapers/govcert/: __init__.py  config.py  filter_fields.py  provider.py
avd_scraper/scrapers/hkcert/: __init__.py  config.py  filter_fields.py  provider.py
avd_scraper/scrapers/huawei_sa/: __init__.py  config.py  filter_fields.py  provider.py
avd_scraper/scrapers/zeroday/: __init__.py  config.py  filter_fields.py  provider.py
scripts/: migrate_schema_v2.py
tests/: test_cli.py  test_client.py  test_config.py  test_cve_backfill.py  test_filters.py  test_migration.py  test_models.py  test_mongo.py  test_mongo_filter.py  test_runner.py  test_sync.py
tests/scrapers/cisco/: test_cisco_parsers.py  test_cisco_provider.py
tests/scrapers/cve/: test_cve_parsers.py
tests/scrapers/govcert/: test_govcert_parsers.py  test_govcert_provider.py
(+35 files in other folders)
